--- a/mapsForStoryboard.qmd
+++ b/mapsForStoryboard.qmd
@@ -3578,6 +3578,7 @@ routes <- data.frame("up" = rep(begin, length(options_initial)),
                      "down" = options_initial)
 for(x in 1:length(options_initial)){
 #x <- 1
+#calc_support("r_23", "r_6", input)
 
   for(i in 1:length(options)){
         out <- calc_support(routes$up[i], routes$down[i], input)
@@ -3601,13 +3602,15 @@ big_keep$start <- begin
 if(t == 1) biggest_keep <- big_keep
   if(t > 1) biggest_keep <- rbind(biggest_keep, big_keep)
 }
+#started at 1:55 pm, finished 1:59
 smart_iterate_w3 <- biggest_keep
-smart_iterate_w3 %>% group_by(start) %>% 
-  summarise(mean = mean(prop),
-            sd = sd(prop)) %>% 
-  ggplot(aes(x = mean, y = sd))+
-  geom_point()+
-  geom_point(data = reference, aes(x = mean, y = sd, color = type, shape = shed))
+smart_iterate_w3 %>% group_by(start) #%>% 
+  ggplot()+
+  geom_density(data = smart_iterate_w3, 
+               aes(x = prop, y = after_stat(density), color = start))+
+  geom_density(data = filter(all_pk, timescale == "30mins" | shed == "W3"))+
+  aes(x = prop, y = after_stat(density))#+
+
 ```
 ```{r iterating-smart-FB}
 #pick a sensor randomly, then test every other sensor to see which has the best hierarchical behavior with that one. Proceed down the list without replacement
@@ -3678,83 +3681,6 @@ biggest_keep %>% group_by(start) %>%
        y = "Proportion sd",
        x = "Proportion mean")
 
-```
-```{r fixed-function}
-
-#calc_support <- function(up, down, input){
-#up <- routes$up[i] #input
-#down <- routes$down[i]
-up <- "r_28"
-down <- "r_6"
-incase <- data.frame(up = c(0,0), down = c(0,0))
-colnames(incase) <- c(up, down)
-mod3 <- input %>% select(up,down, datetime)#, -datetime)
-no_dupes <- mod3 %>%
-  #filter(row_number() == 1 | !apply(. == lag(.), 1, all))
-      filter(row_number() == 1 | !apply(select(., up, down) == lag(select(., up, down)), 1, all))
-
-#filter no dupes to drying/wetting, then plot these on a hydrograph
-filter(no_dupes, up == )
-no_dupes_q <- no_dupes %>% rename(DATETIME = datetime) %>% 
-  left_join(q_23_f, by = "DATETIME")
-
-ggplot(q_23_f, aes(x  = DATETIME, y = Q_mm_day))+
-  geom_line()+
-  geom_point(data = no_dupes_q)+
-  labs(title = "Discharge from W3, July to Nov 2023",
-       x = "",
-       y = "Instantaneous Q (mm/day)")+
-  theme_classic()+
-  lims(x = c(min(q_23_f$DATETIME), max(q_23_f$DATETIME)))
-
-#should I distinguish between wetting and drying sequences?
-#all flowing all the time?
-check <- nrow(no_dupes)
-#make it so that there cannot be a sequence without change
-
-#error when both locations flowed the whole time; 
-if(check == 1) no_dupes <- rbind(no_dupes, no_dupes, incase)
-
-# Define window size
-window_size <- 2
-
-# Create sliding windows
-windows <- rollapply(
-  select(no_dupes, -datetime),
-  width = window_size,
-  by.column = FALSE,
-  FUN = function(x) paste(as.vector(t(x)), collapse = "")
-)
-
-# Count and sort sequences
-sequence_counts <- table(windows)
-sorted_counts <- sort(sequence_counts, decreasing = TRUE)
-
-# Display all sequences and their frequencies
-sequence_df <- as.data.frame(sorted_counts, stringsAsFactors = FALSE)
-colnames(sequence_df) <- c("Sequence", "Frequency")
-#View(sequence_df)
-
-total <- sum(sequence_df$Frequency)
-#write some way to score the sequence_df
-#award one point for one of these configs:
-supports <- c("0001","0111","1101", "0100")
-#subset from the 16 possibilities, except it is fewer because
-#0000, 1111, 0101, 1010 are removed...
-
-sub <- filter(sequence_df, Sequence %in% supports)
-points <- sum(sub$Frequency)
-
-#create output with the total and the sub, also the two input locations
-output <- data.frame(up, down, points, total)
-#error handling- in situation where both points flowed 100% of the time
-if(check == 1) output$points <- NA
-if(check == 1) output$total <- NA
-
-return(output)
-}
-
-calc_support("r_28", "r_6", input)
 ```
 
 #maps of hierarchical behavior
