--- a/mapsForStoryboard.qmd
+++ b/mapsForStoryboard.qmd
@@ -2938,8 +2938,8 @@ all_uaa <- read_csv("./hierarchy_analysis_results/drainageArea.csv")
 sults_so_far <- rbind(all_position,
                       all_pk,
                       #all_nt,
-                      all_uaa,
-                      all_slope,
+                      #all_uaa,
+                      #all_slope,
                       all_twi
                       ) %>% 
   mutate(timescale = fct_relevel(timescale,
@@ -2950,8 +2950,8 @@ sults_so_far <- rbind(all_position,
                                  c(
                                 "Flow Permanence",
                                 "Relative Position",
-                                "Drainage Area",
-                                "Slope",
+                                #"Drainage Area",
+                                #"Slope",
                                 "Topographic Wetness Index")))#,
                                 #"Random")))
 sults_so_far %>% 
@@ -3138,6 +3138,29 @@ geom_density(aes(fill = shed, color = shed), alpha = 0.5)+
                      name = "Watershed")+
   facet_grid(timescale~hierarchy)
 
+shed_colors <- c("#397367", "#FFD166", "#7E6B8F")
+
+#plots for committee meeting
+sults_so_far %>% 
+  filter(timescale %in% c("30mins", "daily")#, hierarchy == "Flow Permanence"
+         ) %>% 
+  ggplot(aes(x = prop, y = after_stat(density))) +
+geom_density(aes(fill = shed, color = shed), alpha = 0.5)+
+    #geom_density(alpha = 0.5, lty = 3)+
+      geom_vline(xintercept = 0.5, lty = 2, alpha = 0.5)+
+    theme_bw()+
+  ylim(c(0, 3))+
+  xlim(c(0,1))+
+  labs(title = "Distributions of Proportion of time Hiearchies Followed",
+       x = "Proportion of time followed",
+       y = "Density")+
+  scale_fill_manual(values = shed_colors,
+                     
+                     name = "Watershed")+
+  scale_color_manual(values = shed_colors,
+                     
+                     name = "Watershed")+
+  facet_grid(timescale~hierarchy)
 ```
 ##find times when the network goes from very dry to very wet
 ```{r}
@@ -5360,7 +5383,7 @@ iterate_groups_combos <- function(up, down, input, timestep){
   return(iterate_groups_alldat)
 }
 
-#iterate_groups("r_23", "r_6", input, hours(1))
+iterate_groups("r_23", "r_6", input, hours(1))
 #function to take a list of routes and input dataset
 #contains group iteration function
 #for loop to iterate through full list of combinations of up and downstream locations
@@ -5380,16 +5403,101 @@ calculate_hierarchy_combos <- function(routes, input, timestep){
 
   }
   final_output <- alldat %>% 
-    drop_na() 
-  # %>%
-  #   group_by(up, down) %>%
-  #   summarise(total = sum(total),
-  #             points = sum(points)) %>% 
-  #   mutate(prop = points/total)
+    drop_na() %>%
+    group_by(up, down, Sequence) %>%
+    summarise(Frequency = sum(Frequency))
   return(final_output)
 }
 
-calculate_hierarchy_combos(routes, input, days(1))
+#calculate_hierarchy_combos(routes, input, days(1))
+
+fantastic_four_combos <- function(routes, shed){
+  theFour <- c("30mins", "hourly", "4hr", "daily")
+  
+  for(q in 1:length(theFour)){
+    #if statements to detect timescale, calculate appropriate inputs
+    timescale <- theFour[q]
+  if(timescale == "30mins"){
+    input <- rbind(input_w3, input_fb, input_zz) %>%
+      filter(wshed == shed, mins %in% c(0, 30)) %>%
+      select(datetime, binary, ID) %>%
+      mutate(ID = paste0("r_", ID)) %>%
+      pivot_wider(names_from = ID, values_from = binary)
+    timestep <- minutes(30)
+  } 
+  else if(timescale == "hourly"){
+    input <- rbind(input_w3, input_fb, input_zz) %>%
+      filter(wshed == shed, mins %in% c(0)) %>%
+      select(datetime, binary, ID) %>%
+      mutate(ID = paste0("r_", ID)) %>%
+      pivot_wider(names_from = ID, values_from = binary)
+    timestep <- hours(1)
+  } 
+  else if(timescale == "4hr"){
+    input <- rbind(input_w3, input_fb, input_zz) %>%
+      mutate(hour = hour(datetime)) %>% 
+      filter(wshed == shed, hour %in% c(0,4,8,12,16,20,24), mins %in% c(0)) %>%
+      select(datetime, binary, ID) %>%
+      mutate(ID = paste0("r_", ID)) %>%
+      pivot_wider(names_from = ID, values_from = binary)
+    timestep <- hours(4)
+  } 
+  else if(timescale == "daily"){
+    input <- rbind(input_w3, input_fb, input_zz) %>%
+      mutate(hour = hour(datetime)) %>% 
+      filter(wshed == shed, hour %in% c(12), mins %in% c(0)) %>%
+      select(datetime, binary, ID) %>%
+      mutate(ID = paste0("r_", ID)) %>%
+      pivot_wider(names_from = ID, values_from = binary)
+    timestep <- days(1)
+  } 
+  else {
+    stop("Not a timescale anticipated!")
+  }
+    out <- calculate_hierarchy_combos(routes, input, timestep)
+    out$timescale <- theFour[q]
+    
+    if(q == 1) fanfar <- out
+    if(q > 1) fanfar <- rbind(fanfar, out)
+  }
+  fanfar$shed <- shed
+  return(fanfar)
+}
+
+routes_w3 <- read_csv("w3_flowrouting.csv") %>% 
+  filter(sensor %in% W3_IDs, drains_from %in% W3_IDs) %>% 
+  rename("up" = drains_from, "down" = sensor) %>% 
+  select(up, down) %>% 
+  filter(down != 100, up != 0)
+
+test <- fantastic_four_combos(routes_w3, "W3")
+  
+#test removing 0011 and 1100, and calcing prop values
+test %>% 
+  filter(Sequence != 0011, Sequence != 1100) %>% 
+  group_by(up, down, timescale, shed) %>% 
+  summarise()
+
+
+total_state_changes <- test %>% 
+    filter(Sequence != 0011, Sequence != 1100) %>% 
+    group_by(up, down, timescale, shed) %>% 
+    summarise(totals = sum(Frequency))
+supports <- c("0001","0111","1101", "0100")
+
+hierarchical_changes <- test %>% 
+    filter(Sequence != 0011, Sequence != 1100) %>% 
+    filter(Sequence %in% supports) %>% 
+    group_by(up, down, timescale, shed) %>%  
+    summarise(hierarchical = sum(Frequency)) 
+
+un_split <- total_state_changes %>% 
+  left_join(hierarchical_changes, by = c("up", "down", "shed", "timescale")) %>% 
+  mutate(prop = hierarchical/totals) %>% 
+  mutate_all(~replace(., is.na(.), 0))
+un_split
+
+#use this chunk to re-run everything
 ```
 ##finding flaw in wetting and drying analysis
 Determined that original version resulted in excluding all sensor pairs with no hierarchical behavior, so distributions seemed a lot better than earlier analyses.
@@ -5421,8 +5529,10 @@ fb_test$direction <- "drying"
 fb_test$direction[fb_test$sum_t1 < fb_test$sum_t2] <- "wetting"
 
 total_state_changes <- fb_test %>% group_by(up, down, direction) %>% summarise(totals = sum(Frequency))
+#up down up down
 supports <- c("0001","0111","1101", "0100")
 
+#figuring out how to split wetting and drying, and non-hierarchical and hierarchical
 hierarchical_changes <- fb_test %>% 
   filter(Sequence %in% supports) %>% group_by(up, down, direction) %>% summarise(hierarchical = sum(Frequency)) 
 
@@ -5430,7 +5540,7 @@ total_state_changes %>% left_join(hierarchical_changes, by = c("direction", "up"
   mutate(prop = hierarchical/totals) %>% 
   mutate_all(~replace(., is.na(.), 0)) %>% View()
 
-#without wetting and derying
+#without wetting and drying
 total_state_changes <- fb_test %>% group_by(up, down) %>% summarise(totals = sum(Frequency))
 supports <- c("0001","0111","1101", "0100")
 
@@ -5705,29 +5815,30 @@ summarized_slope_wd <- all_slope_wd %>%
 ```
 ##Plots based on wetting and drying broken up
 Consolidate the gains!!
-```{r consolidating-progress}
+```{r plots-for-wetting-and-drying}
 
 
 sults_so_far <- rbind(summarized_position_wd,
                       summarized_pk_wd,
-                      summarized_dof_wd,
-                      summarized_uaa_wd,
-                      summarized_tpi_wd,
-                      summarized_twi_wd,
-                      summarized_slope_wd
+                      #summarized_dof_wd,
+                      #summarized_uaa_wd,
+                      #summarized_tpi_wd,
+                      summarized_twi_wd
+                      #summarized_slope_wd
                       ) %>% ungroup() %>% 
   mutate(timescale = fct_relevel(timescale,
                               c("30mins", "hourly", "4hr", "daily")),
          hierarchy = as.factor(str_trim(as.character(hierarchy))),
          
          hierarchy = fct_relevel(hierarchy, 
-                                 c("Duration of Flow",
+                                 c(#"Duration of Flow",
                                 "Flow Permanence",
                                 "Relative Position",
-                                "Drainage Area",
-                                "Topographic Position Index",
-                                "Topographic Wetness Index",
-                                "Slope"))) %>% 
+                                #"Drainage Area",
+                                #"Topographic Position Index",
+                                "Topographic Wetness Index"#,
+                                #"Slope"
+  ))) %>% 
   pivot_longer(cols = starts_with("avg"),
                names_to = "direction",
                values_to = "prop") 
@@ -5776,7 +5887,7 @@ sults_so_far %>%
 
 possible_times <- c("30mins", "hourly", "4hr", "daily")
 
-t <- 1
+t <- 4
 sults_so_far %>% 
   filter(timescale %in% c(possible_times[t])) %>% 
   ggplot(aes(x = prop, y = after_stat(density))) +
@@ -5931,8 +6042,16 @@ geom_density(alpha = 0.5)+
 #maybe it would look better to add the randomly generated hierarchies for a comparison
 ```
 
+```{r}
+rbind(bind23, bind24) %>% 
+  filter(wshed == "W3", ID == 2)
+```
+
 #Run daily analysis again
 Alter code to test two scenarios and compare to the original one
 - test every hour for daily observation
 - average state
 - most common state in a day
+
+#new analysis after committee meeting
+##remove 0011, see how this affects distributions
