--- a/mapsForStoryboard.qmd
+++ b/mapsForStoryboard.qmd
@@ -387,9 +387,9 @@ valley_plot <- ggplot()+
     new_scale_fill() +
   geom_spatraster(data = m1, alpha = 0.5)+
   geom_sf(data = hb_outline, fill = NA, color = "black", alpha = 0.6, lwd = 1, lty = 2) +
-  geom_sf(data = fb_outline, fill = shed_colors[1], color = shed_colors[1], alpha = 0.6, lwd = 1) +
+  #geom_sf(data = fb_outline, fill = shed_colors[1], color = shed_colors[1], alpha = 0.6, lwd = 1) +
   geom_sf(data = w3_outline, fill = shed_colors[2], color = shed_colors[2], alpha = 0.6, lwd = 1) +
-  geom_sf(data = zz_outline, fill = shed_colors[3], color = shed_colors[3], alpha = 0.6, lwd = 1) +
+  #geom_sf(data = zz_outline, fill = shed_colors[3], color = shed_colors[3], alpha = 0.6, lwd = 1) +
 
   #geom_sf(data = fb_net, colour = "darkslategray3") +#, lwd = 3) +
     #geom_sf(data = lcc, colour = "midnightblue") + #, pch = 19, size = 6) +
@@ -2680,7 +2680,7 @@ ggplot()+
   stat_ecdf(data = w3_new, aes(prop), color = "blue")
 
 sults_so_far %>% 
-  filter(timescale == "30mins") %>% 
+  #filter(timescale == "30mins") %>% 
   ggplot(aes(prop, color = hierarchy)) +
   stat_ecdf(geom = "line")+
   theme_classic()+
@@ -2693,7 +2693,7 @@ sults_so_far %>%
        title = "How often do adjacent sensors follow a hierarchy?")+
   scale_color_manual(values = c("#397367", "#FFA400", "#93C2F1", "#7E6B8F"),
                      name = "Organizing Scheme")+
-  facet_wrap(~shed)#+
+  facet_wrap(timescale~shed)#+
   lims(x = c(0.5,1),
        y = c(0.5, 1))
 
@@ -5836,6 +5836,7 @@ Alter code to test two scenarios and compare to the original one
 #new analysis after committee meeting
 ##remove 0011, see how this affects distributions
 ###developing functions to return all combinations
+Output of these functions will return all combinations of 4 observed and their counts, instead of filtering to combinations of interest like earlier attempts
 Included a new function, calc_props that removes 0011 and 1100, but a function for different scenarios could be developed here instead
 ```{r all-combos}
 calc_support_combos <- function(up, down, input){
@@ -6027,7 +6028,7 @@ routes_w3 <- read_csv("w3_flowrouting.csv") %>%
   select(up, down) %>% 
   filter(down != 100, up != 0)
 
-test <- fantastic_four_combos(routes_w3, "W3")
+#test <- fantastic_four_combos(routes_w3, "W3")
 
 
 #must calculate prop values after and outside of fantastic 4
@@ -6417,3 +6418,137 @@ smart_iterate_w3 %>% group_by(start) #%>%
   aes(x = prop, y = after_stat(density))#+
 
 ```
+
+```{r}
+#function that will take two sensors, and determine which one is dominant, and what percentage of time it follows that hierarchy
+calc_support_combos <- function(up, down, input){
+#inputs to function- comment out in final version
+# i <- 4
+# up <- paste0("r_",routes$up[i])
+# down <- paste0("r_",routes$down[i])
+#input <- filtered_input
+
+#create output with the total and the sub, also the two input locations
+output <- data.frame(up, down)
+
+  
+no_dupes <- input %>% 
+      select(up,down, datetime) %>% #remove date
+      # make it so that there cannot be a sequence without change
+      # keep date column for indexing purposes later
+      filter(row_number() == 1 | !apply(select(., up, down) == lag(select(., up, down)), 1, all)) %>% 
+      #remove rows where one of the sensors is missing data
+      drop_na()
+#View(no_dupes)
+#all flowing all the time?
+check <- nrow(no_dupes)
+
+if(check <= 2){
+  sequence_df <- data.frame("Sequence" = NA, 
+                            "Frequency" = NA,
+                            "up" = up,
+                            "down" = down)
+  return(sequence_df)
+} 
+else {
+# Define window size
+window_size <- 2
+
+# Create sliding windows
+windows <- rollapply(
+  select(no_dupes, -datetime),
+  width = window_size,
+  by.column = FALSE,
+  FUN = function(x) paste(as.vector(t(x)), collapse = "")
+)
+
+# Count and sort sequences
+sequence_counts <- table(windows)
+sorted_counts <- sort(sequence_counts, decreasing = TRUE)
+
+# Display all sequences and their frequencies
+sequence_df <- as.data.frame(sorted_counts, stringsAsFactors = FALSE)
+if(check > 1) colnames(sequence_df) <- c("Sequence", "Frequency")
+
+
+sequence_df$up <- up
+sequence_df$down <- down
+output$total <- sum(sequence_df$Frequency)
+#write some way to score the sequence_df
+#award one point for one of these configs:
+supports <- c("0001","0111","1101", "0100")
+
+
+sub <- filter(sequence_df, Sequence %in% supports)
+output$points <- sum(sub$Frequency)
+
+
+#create output with transitions
+#error handling- in situation where both points flowed 100% of the time
+
+return(sequence_df)}
+}
+
+calc_support_combos("r_23", "r_20", input)
+
+calc_props <- function(routes, shed){
+  full_combos <- fantastic_four_combos(routes, shed)
+total_state_changes <- full_combos %>% 
+    filter(Sequence != 0011, Sequence != 1100) %>% 
+    group_by(up, down, timescale, shed) %>% 
+    summarise(totals = sum(Frequency))
+supports <- c("0001","0111","1101", "0100")
+
+hierarchical_changes <- full_combos %>% 
+    filter(Sequence != 0011, Sequence != 1100) %>% 
+    filter(Sequence %in% supports) %>% 
+    group_by(up, down, timescale, shed) %>%  
+    summarise(hierarchical = sum(Frequency)) 
+
+un_split <- total_state_changes %>% 
+  left_join(hierarchical_changes, by = c("up", "down", "shed", "timescale")) %>% 
+  mutate(prop = hierarchical/totals) %>% 
+  mutate_all(~replace(., is.na(.), 0))
+return(un_split)
+}
+```
+```{r}
+#set routes for all 3 watersheds
+routes_w3 <- pks_w3 %>% 
+    filter(ID %in% W3_IDs) %>% 
+  arrange(desc(pk)) %>% 
+  mutate(down = lag(ID)) %>% 
+  rename("up" = ID) %>% drop_na() %>% 
+  select(up, down)
+
+input <- rbind(bind23, bind24) %>%
+  filter(wshed == "W3", mins %in% c(0, 30)) %>%
+  select(datetime, binary, ID) %>%
+  #mutate(ID = paste0("r_",ID)) %>% 
+  pivot_wider(names_from = ID, values_from = binary)
+
+combos <- unique(c(routes_w3$up, routes_w3$down))
+zzz <- length(combos)
+rep(combos, zzz)
+all_list <- c()
+for(z in 1:zzz){
+  all_list <- c(all_list, rep(combos[z], zzz))
+}
+
+all_combos_routes <- data.frame("up" = rep(combos, zzz),
+                                "down" = all_list)
+#run calc_support for all sheds and timesteps for relative position
+test <- calc_props(all_combos_routes, "W3")
+```
+
+```{r}
+#figure out how to display results of testing all possible combinations
+#output the highest downstream for each upstream
+test %>% 
+  group_by(up, timescale) %>%
+  reframe(max_prop = max(prop),
+    down1 = down[which(prop == max(prop))]) %>% 
+  View()
+  
+```
+
